cmss/main/default/objects/CommissionReports__mdt/CommissionReports__mdt.object-meta.xml
<CustomObject>
    <description>List of reports to be allowed for pdf export via custom LWC component</description>
    <label>CommissionReports</label>
    <pluralLabel>CommissionReports</pluralLabel>
</CustomObject>