cmss/main/default/objects/CommissionReports__mdt/fields/Columns__c.field-meta.xml
<CustomField>
    <fullName>Columns__c</fullName>
    <description>comma separated list of API names of columns to be displayed on PDF for each report</description>
    <label>Columns</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>