cmss/main/default/objects/CommissionReports__mdt/fields/Show_Footer__c.field-meta.xml
<CustomField>
    <fullName>Show_Footer__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Footer</label>
    <type>Checkbox</type>
</CustomField>