cmss/main/default/objects/CommissionReports__mdt/fields/Show_Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Show_Pending_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Pending Amount</label>
    <type>Checkbox</type>
</CustomField>